--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,28 @@ html {
    font-size: 62.5%;
    font-family: 'DM Sans', sans-serif;
 }
+header {
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
+   min-width: 320px; /*dimension mas chica en mobile*/
+   height: 334px;
+   text-align: center;
+}
+header img {
+   width: 150px;
+   height: 24px;
+   margin-top: 60px;
+   align-self: center; /*centra elementos que tienen como padre un flex*/
+}
+.header--title-container {
+   width: 90%;
+   min-width: 288px; /*no disminuira mas de 288px */
+   max-width: 900px; /*no crecera mas de 900px */
+   height: 218px;
+   margin-top: 40px;
+   text-align: center;
+   align-self: center;
+}
