Se creo la estructura semantica

--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,7 @@ header img {
    background-image: url('./assets/icons/down-arrow.svg');
 }
 /* HEADER */
+
+/* INTERCAMBIOS */
+
+/* INTERCAMBIOS */
