--- a/styles.css
+++ b/styles.css
@@ -137,4 +137,113 @@ main {
    line-height: 1.6rem;
    color: #757575;
 }
+.main-currency-table,
+.main-commission-table {
+   width: 70%;
+   min-width: 235px;
+   max-width: 500px;
+   height: 360px;
+   margin: 0 auto;
+   font-family: 'Inter', sans-serif;
+}
+.main-commission-table .commission-table--title {
+   margin-bottom: 15px;
+   font-size: 1.8rem;
+   font-weight: bold;
+   text-align: left;
+   line-height: 2.3rem;
+   color: var(--secondary-blue);
+}
+.main-currency-table .currency-table--title {
+   margin-bottom: 15px;
+   font-size: 1.8rem;
+   font-weight: bold;
+   text-align: left;
+   line-height: 2.3rem;
+   color: var(--bitcoin-orange);
+}
+.currency-table--container,
+.commission-table--container {
+   width: 90%;
+   min-width: 230px;
+   max-width: 300px;
+   height: 250px;
+   margin: 0 auto;
+}
+.currency-table--container table,
+.commission-table--container table {
+   width: 100%;
+   height: 100%;
+}
+.currency-table--container td,
+.commission-table--container td {
+   width: 50%;
+   font-size: 1.6rem;
+   font-weight: 500;
+   line-height: 1.9rem;
+   color: var(--grey);
+   background-color: var(--just-white);
+}
+.table__top-left {
+   border-radius: 15px 0 0 0;
+}
+.table__top-right {
+   border-radius: 0 15px 0 0;
+}
+.table__bottom-right {
+   border-radius: 0 0 15px 0;
+}
+.table__bottom-left {
+   border-radius: 0 0 0 15px;
+}
+.currency-table--container .currency-table--container,
+.commission-table--container .currency-table--container {
+   font-size: 1.4rem;
+   font-weight: normal;
+   line-height: 1.7rem;
+   color: #757575;
+}
+.currency-table--container .down {
+   display: inline-block;
+   width: 15px;
+   height: 15px;
+   margin-left: 10px;
+   background-image: url('./assets/icons/trending-down.svg');
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+}
+.currency-table--container .up {
+   display: inline-block;
+   width: 15px;
+   height: 15px;
+   margin-left: 10px;
+   background: url('./assets/icons/trending-up.svg') no-repeat center;
+   background-size: cover;
+}
+.currency-table--date {
+   width: max-content;
+   height: 30px;
+   margin: 0 auto;
+   margin-top: 15px;
+   padding: 8px;
+   background-color: var(--soft-orange);
+   border-radius: 8px;
+}
+.commission-table--date {
+   width: max-content;
+   height: 30px;
+   margin: 0 auto;
+   margin-top: 15px;
+   padding: 8px;
+   background-color: var(--soft-blue);
+   border-radius: 8px;
+}
+.currency-table--date p,
+.commission-table--date p {
+   font-size: 1.2rem;
+   font-weight: 300;
+   line-height: 1.5rem;
+   color: var(--warm-black);
+}
 /* INTERCAMBIOS */
