--- a/styles.css
+++ b/styles.css
@@ -287,4 +287,50 @@ main {
    line-height: 1.8rem;
    color: #808080;
 }
+.product-detail--card {
+   width: 90%;
+   padding: 15px;
+   min-width: 288px;
+   max-width: 400px;
+   height: 150px;
+   margin: 15px auto;
+   background-color: var(--black);
+   border-radius: 5px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+.product--card-title {
+   margin-bottom: 15px;
+   font-size: 1.8rem;
+   font-weight: bold;
+   line-height: 1.8rem;
+   color: var(--just-white);
+}
+.product--card-body {
+   font-size: 1.4rem;
+   font-weight: 500;
+   line-height: 1.8rem;
+   color: #808080;
+}
+.icon-card {
+   display: inline-block;
+   width: 20px;
+   height: 20px;
+   margin-bottom: 10px;
+}
+.clock {
+   background: url('./assets/icons/clock.svg') no-repeat center;
+   background-size: cover;
+}
+.eye {
+   background: url('./assets/icons/eye.svg') no-repeat center;
+   background-size: cover;
+}
+.dollar {
+   background: url('./assets/icons/dollar-sign.svg') no-repeat center;
+   background-size: cover;
+}
+.check {
+   background: url('./assets/icons/check-circle.svg') no-repeat center;
+   background-size: cover;
+}
 /* BENEFICIOS */
