--- a/styles.css
+++ b/styles.css
@@ -334,3 +334,19 @@ main {
    background-size: cover;
 }
 /* BENEFICIOS */
+
+/* COMODIN */
+.bitcoin-img-container {
+   width: 100%;
+   min-width: 320px;
+   height: 50vh;
+   background: url('./assets/img/bitcoinbaby2x.jpg') no-repeat center;
+   background-size: cover;
+   text-align: center;
+}
+.bitcoin-img-container h2 {
+   color: var(--just-white);
+   font-size: 2.4rem;
+   font-weight: bold;
+   padding-top: 60px;
+}
