se creo el scroll horizontal

--- a/styles.css
+++ b/styles.css
@@ -380,8 +380,26 @@ main {
    line-height: 1.8rem;
    color: #757575;
 }
+.plans-container--slider {
+   display: flex;
+   gap: 20px;
+   height: 316px;
+   overflow-x: scroll;
+   overscroll-behavior-x: contain;
+   scroll-snap-type: x proximity;
+   padding: 0 20px;
+}
+.plans-container--slider::-webkit-scrollbar {
+   background-color: var(--soft-orange);
+   height: 3px;
+}
+
+.plans-container--slider::-webkit-scrollbar-thumb {
+   background-color: var(--bitcoin-orange);
+}
 .plans-container--card {
    position: relative;
+   scroll-snap-align: center; /*cuando hagamos scroll nos lleve al centro del elemento*/
    width: 70%;
    min-width: 230px;
    max-width: 300px;
@@ -448,6 +466,7 @@ main {
    font-size: 1.4rem;
    font-weight: bold;
    line-height: 1.8rem;
+   cursor: pointer;
    color: var(--black);
    font-family: 'DM Sans', sans-serif;
 }
