--- a/styles.css
+++ b/styles.css
@@ -382,25 +382,17 @@ main {
 }
 .plans-container--slider {
    display: flex;
-   gap: 20px;
+   gap: 10px;
    height: 316px;
    overflow-x: scroll;
    overscroll-behavior-x: contain;
    scroll-snap-type: x proximity;
    padding: 0 20px;
 }
-.plans-container--slider::-webkit-scrollbar {
-   background-color: var(--soft-orange);
-   height: 3px;
-}
-
-.plans-container--slider::-webkit-scrollbar-thumb {
-   background-color: var(--bitcoin-orange);
-}
 .plans-container--card {
    position: relative;
    scroll-snap-align: center; /*cuando hagamos scroll nos lleve al centro del elemento*/
-   width: 70%;
+   width: 60%;
    min-width: 230px;
    max-width: 300px;
    height: 250px;
@@ -487,3 +479,31 @@ main {
    border: 2px solid var(--secondary-blue);
 }
 /* PLANES */
+
+/* FOOTER */
+footer {
+   display: flex;
+   width: 100%;
+   height: 150px;
+   background-color: var(--bitcoin-orange);
+}
+footer section {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 50%;
+}
+footer .left ul {
+   font-size: 1.4rem;
+   font-weight: 500;
+   line-height: 1.8rem;
+   list-style: none;
+}
+.left li {
+   margin: 10px 0;
+}
+.left a {
+   text-decoration: none;
+   color: var(--just-white);
+}
+/* FOOTER */
